# RESTAPI/swagger.json
@@ -25,186 +25,94 @@
     "paths": {
         "/pedido": {
             "post": {
+                "summary": "Criar um pedido na plataforma",
                 "tags": [
-                    "Pedidos"
+                    "Pedido"
                 ],
-                "description": "Criar um novo pedido no sistema",
                 "parameters": [
                     {
                         "informacao": "informação útil que o utilizador queira acrescentar ao pedido",
                         "in": "body",
                         "estadoUtilizador": "Indicar estado do utilizado",
                         "shema": {
-                            "$ref": "#/definitions/Pedido"
+                            "$ref": "#/models/pedido.js#"
                         }
                     }
-                ],
-                "produces": [
-                    "aplication/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Um novo pedido é criado",
-                        "schema": {
-                            "$ref": "#/definitions/Pedido"
-                        }
-                    }
-                }
+                ]
             },
             "get": {
+                "summary": "Retorna todos os pedidos existentes",
                 "tags": [
-                    "Pedidos"
+                    "Pedido"
+                ]
+            }
+        },
+        "/pedido/:pedidoId": {
+            "get": {
+                "summary": "Retorna um pedido com um determinado id",
+                "tags": [
+                    "Pedido"
                 ],
-                "summary": "Get all pedidos in system",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Pedidos"
-                        }
-                    }
-                }
-            },
-            "/pedidos/{pedidoId}": {
                 "parameters": [
                     {
-                        "informacao": "informação útil que o utilizador queira acrescentar ao pedido",
-                        "in": "patch",
-                        "require": true,
-                        "estadoUtilizador": "Indicar estado do utilizado"
-                        
-
+                        "name": "Pedido",
+                        "in": "Header",
+                        "description": "Pedido com um dado id"
                     }
-                ],
-                "get": {
-                    "tags": [
-                        "Pedidos"
-                    ],
-                    "summary": "Get all pedidos with given ID",
-                    "responses": {
-                        "200": {
-                            "description": "Pedido is found",
-                            "schema": {
-                                "$ref": "#/definitions/Pedido"
-                            }
-                        }
-                    }
-                },
-                "delete": {
-                    "summary": "Delete product with given ID",
-                    "tags": [
-                        "Products"
-                    ],
-                    "responses": {
-                        "200": {
-                            "description": "Product is delected",
-                            "schema": {
-                                "$ref": "#/definitions/Product"
-                            }
-                        }
-                    }
-                },
-                "put": {
-                    "summary": "Update product with given ID",
-                    "tags": [
-                        "Products"
-                    ],
-                    "parameters": [
-                        {
-                            "name": "product",
-                            "in": "body",
-                            "description": "Product with new  values of properties",
-                            "schema": {
-                                "$ref": "#/definitions/Product"
-                            }
-                        }
-                    ],
-                    "responses": {
-                        "200": {
-                            "description": "Product is updated",
-                            "schema": {
-                                "$ref": "#/definitions/Product"
-                            }
-                        }
-                    }
-                }
+                ]
             }
         },
         "/utilizador": {
-            "post":{
+            "post": {
                 "summary": "Guarda um utilizador com as informações passadas",
-                "tags":["Utilizador"],
-                "parameters":[
+                "tags": [
+                    "Utilizador"
+                ],
+                "parameters": [
                     {
                         "name": "Utilizador",
                         "in": "body",
-                        "description" : "Utilizador com as propriedades dadas",
-                        "schema":{
+                        "description": "Utilizador com as propriedades dadas",
+                        "schema": {
                             "$ref": "#/models/utilizador.js#"
                         }
                     }
                 ]
             },
-            "get":{
+            "get": {
                 "summary": "Retorna todos os utilizadores existentes",
-                "tags":["Utilizador"]
+                "tags": [
+                    "Utilizador"
+                ]
             }
         },
-        "/utilizador/:utilizadorId":{
-            "get":{
-                "summary":"Retorna todos o utilizador com o id dado",
-                "tags":["Utilizador"],
-                "parameters":[
+        "/utilizador/:utilizadorId": {
+            "get": {
+                "summary": "Retorna todos o utilizador com o id dado",
+                "tags": [
+                    "Utilizador"
+                ],
+                "parameters": [
                     {
                         "name": "Utilizador",
                         "in": "Header",
-                        "description" : "Utilizador com as propriedades dadas"
+                        "description": "Utilizador com as propriedades dadas"
                     }
                 ]
             },
-            "put":{
-                "summary":"Atualiza o utilizador com o id dado",
-                "tags":["Utilizador"],
-                "parameters":[
+            "put": {
+                "summary": "Atualiza o utilizador com o id dado",
+                "tags": [
+                    "Utilizador"
+                ],
+                "parameters": [
                     {
                         "name": "Utilizador",
                         "in": "body",
-                        "description" : "Utilizador com as novas propriedades"
+                        "description": "Utilizador com as novas propriedades"
                     }
                 ]
             }
-        },
-        
-        
-        "defenitions": {
-            "Product": {
-                "required": [
-                    "name",
-                    "_id"
-                ],
-                "properties": {
-                    "_id": {
-                        "type": "string",
-                        "uniqueItems": true
-                    },
-                    "name": {
-                        "type": "string",
-                        "uniqueItems": true
-                    },
-                    "description": {
-                        "type": "string"
-                    },
-                    "quantity": {
-                        "type": "Number"
-                    }
-                }
-            },
-            "Products": {
-                "type": "array",
-                "$ref": "#/definitions/Product"
-            }
         }
-    
     }
-
 }
